[COV-36] : Embed twitter feed by WHO to latest news

--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+ <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </html>
