--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,20 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+
+
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <div id="root"></div>
+
+    <div id="google_translate_element"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
