--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     }
     </script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
     <div id="root"></div>
 
     <div id="google_translate_element"></div>
