--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Opensource platform to serve as reliable information portal about Covid-19 in Nepal" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,9 +21,33 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Covid Nepal</title>
+    <title>CovidNepal</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+    
+  <!-- facebook sharing -->
+  <meta property="fb:app_id" content="131597410756564" />
+  <meta property="og:title" content="CovidNepal" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://covidnepal.org" />
+  <meta property="og:description" content="Opensource platform to serve as reliable information portal about Covid-19 in Nepal" />
+  <meta property="og:image" content="https://covidnepal.org/images/og-img.jpg" />
+  <meta property="og:image:width"   content="200" />
+  <meta property="og:image:height"  content="200" />
+  <meta property="og:image:type"    content="image/jpg" />
+  <!-- end of facebook sharing -->
+
+
+  <!-- twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://covidnepal.org">
+  <meta name="twitter:creator" content="@fusemachines" />
+  <meta name="twitter:title" content="CovidNepal">
+  <meta name="twitter:description" content="Opensource platform to serve as reliable information portal about Covid-19 in Nepal">
+  <meta name="twitter:image" content="https://covidnepal.org/images/og-img.jpg">
+  <meta name="twitter:image:alt" content="COVID NEPAL">
+  
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
