COV-31 navlink issue hotfixed only

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>CovidNepal</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    
+
     <!-- facebook sharing -->
     <meta property="fb:app_id" content="131597410756564" />
     <meta property="og:title" content="CovidNepal" />
@@ -46,7 +46,7 @@
     <meta name="twitter:description" content="Opensource platform to serve as reliable information portal about Covid-19 in Nepal">
     <meta name="twitter:image" content="https://covidnepal.org/images/og-img.jpg">
     <meta name="twitter:image:alt" content="COVID NEPAL">
-  
+
 
   </head>
   <body>
@@ -60,7 +60,7 @@
       }
     </script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
     <div id="google_translate_element"></div>
 
