--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       }
     </script>
 
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
     <div id="google_translate_element"></div>
 
