Fix OneSignal issue

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,9 @@
       OneSignal.push(function() {
         OneSignal.init({
           appId: "206bc4e5-185f-4aba-886c-b95af8264bb7",
+          notifyButton: {
+            enable: true,
+          },
         });
       });
     </script>
