--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       }
     </script>
 
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"></script>
     <script>
       var OneSignal = window.OneSignal || [];
       OneSignal.push(function() {
