--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
           },
         });
       });
+      OneSignal.showHttpPermissionRequest();
     </script>
 
     <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
