--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 
     <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
-    <!-- <div id="google_translate_element"></div> -->
+    <div id="google_translate_element"></div>
 
     <div id="root"></div>
 
